Fixed list container overflowing outside list component.

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -294,6 +294,6 @@ html, body {
 }
 
 .list-container{
-    max-height: 88vh;
+    max-height: 80vh;
     overflow-y: scroll;
 }
